refactor writing of tie flows in equipment export
Signed-off-by: Luma <zamarrenolm@aia.es>